--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -13,4 +13,10 @@
         app:showAsAction="never"/>
 
     <!-- TODO dodac opcje sortowania po nazwie -->
+    <item android:id="@+id/order_name_asc"
+        android:title="Sortuj po nazwie rosnąco"
+        app:showAsAction="never"/>
+    <item android:id="@+id/order_name_desc"
+        android:title="Sortuj po nazwie malejąco"
+        app:showAsAction="never"/>
 </menu>
